--- a/main.html
+++ b/main.html
@@ -36,6 +36,10 @@
       <td class="item">Milk</td>
       <td class="price">50</td>
     </tr>
+	<tr>
+      <td></td>
+      <td class="total"></td>
+    </tr>
   </table>
     <script type="text/javascript" src="./script.js">
 </script>
