--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
     </tr>
 	<tr>
       <td></td>
-      <td class="total"></td>
+      <td id="ans"></td>
     </tr>
   </table>
     <script type="text/javascript" src="./script.js">
